add collection dome

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -37,6 +37,7 @@
 	"coins":"Coins",
     "alcohols":"Alcohols",
     "books":"Books",
-    "music_albums":"Music albums"
+    "music_albums":"Music albums",
+	"sending":"Sending"
 
 }
