--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -37,6 +37,7 @@
     "coins":"Monety",
     "alcohols":"Alkohole",
     "books":"Książki",
-    "music_albums":"Albumy muzyczne"
+    "music_albums":"Albumy muzyczne",
+    "sending":"Wysyłanie"
 
 }
