added collection overview cards, changed profile pages

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -38,6 +38,7 @@
     "alcohols":"Alcohols",
     "books":"Books",
     "music_albums":"Music albums",
-	"sending":"Sending"
+	"sending":"Sending",
+	"loading":"Loading"
 
 }
