--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -38,6 +38,7 @@
     "alcohols":"Alkohole",
     "books":"Książki",
     "music_albums":"Albumy muzyczne",
-    "sending":"Wysyłanie"
+    "sending":"Wysyłanie",
+    "loading":"Pobieranie"
 
 }
