--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -56,7 +56,9 @@
     "text_area": "Pole tekstowe",
     "yes":"Tak",
     "no":"Nie",
-    "no_items":"Ta kolekcja nie ma jeszcze żadnych pozycji."
+    "no_items":"Ta kolekcja nie ma jeszcze żadnych pozycji.",
+    "welcome":"Witaj",
+    "browse_largest":"Zobacz nasze największe kolekcje:"
 
 
 
