delete item function

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -61,7 +61,7 @@
 	"browse_largest":"Browse our largest collections:",
 	"browse_recent":"See most recent items:",
 	"view_item":"View Item",
-	"collection": "Kolekcja",
+	"collection": "Collection",
 	"item":"Item",
 	"edit":"Edit",
     "view":"View",
