--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -65,7 +65,8 @@
     "item":"Pozycja",
     "edit":"Edytuj",
     "view":"Zobacz",
-    "return":"Powrót"
+    "return":"Powrót",
+    "edit_collection":"Edytuj kolecję"
 
 
 }
