--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,64 +11,62 @@
 	"log_out": "Log Out",
 	"sign_up": "Sign up",
 	"account_details": "Account details",
-	"name":"Name",
-	"user_management":"User Management",
-	"roles":"Roles",
+	"name": "Name",
+	"user_management": "User Management",
+	"roles": "Roles",
 	"last_login": "Last login",
 	"actions": "Actions",
 	"active": "Active",
-    "blocked":"Blocked",
-	"delete":"Delete",
+	"blocked": "Blocked",
+	"delete": "Delete",
 	"block": "Block",
-    "promote_user":"Promote to admin",
-    "downgrade_user":"Downgrade",
+	"promote_user": "Promote to admin",
+	"downgrade_user": "Downgrade",
 	"unblock": "Unblock",
-	"users_collections":"Users's collections",
-	"no_collections":"This user hasn't added any collections yet.",
-	"profile":"Profile",
-	"add_collection":"Add Collection",
-	"create_collection":"Create Collection",
-	"title":"Collection Title",
-	"topic":"Collection Topic:",
-	"description":"Collection Description",
-	"tags":"Tags (optional):",
-	"image":"Cover Image (optional):",
-	"field_required":"This field is required.",
-	"coins":"Coins",
-    "alcohols":"Alcohols",
-    "books":"Books",
-    "music_albums":"Music albums",
-	"sending":"Sending",
-	"loading":"Loading",
-	"add_item":"Add Item",
+	"users_collections": "Users's collections",
+	"no_collections": "This user hasn't added any collections yet.",
+	"profile": "Profile",
+	"add_collection": "Add Collection",
+	"create_collection": "Create Collection",
+	"title": "Collection Title",
+	"topic": "Collection Topic:",
+	"description": "Collection Description",
+	"tags": "Tags (optional):",
+	"image": "Cover Image (optional):",
+	"field_required": "This field is required.",
+	"coins": "Coins",
+	"alcohols": "Alcohols",
+	"books": "Books",
+	"music_albums": "Music albums",
+	"sending": "Sending",
+	"loading": "Loading",
+	"add_item": "Add Item",
 	"view_collection": "View Collection",
-    "category":"Category",
-    "author":"Author",
-	"item_name":"Item name",
-    "add_field":"Add custom field",
-	"type":"Type",
-	"confirm":"Confirm",
-    "close":"Close",
-	"radio_buttons":"Yes/No Radio buttons",
-    "number":"Number",
-    "date":"Date",
-    "text_field":"Text field",
-    "text_area": "Multiline text field",
-	"yes":"Yes",
-    "no":"No",
-	"no_items":"This collection doens't have any items yet.",
-	"welcome":"Welcome",
-	"browse_largest":"Browse our largest collections:",
-	"browse_recent":"See most recent items:",
-	"view_item":"View Item",
+	"category": "Category",
+	"author": "Author",
+	"item_name": "Item name",
+	"add_field": "Add custom field",
+	"type": "Type",
+	"confirm": "Confirm",
+	"close": "Close",
+	"radio_buttons": "Yes/No Radio buttons",
+	"number": "Number",
+	"date": "Date",
+	"text_field": "Text field",
+	"text_area": "Multiline text field",
+	"yes": "Yes",
+	"no": "No",
+	"no_items": "This collection doens't have any items yet.",
+	"welcome": "Welcome",
+	"browse_largest": "Browse our largest collections:",
+	"browse_recent": "See most recent items:",
+	"view_item": "View Item",
 	"collection": "Collection",
-	"item":"Item",
-	"edit":"Edit",
-    "view":"View",
-	"return":"Return",
-    "edit_collection":"Edit collection"
-
-
-
-
+	"item": "Item",
+	"edit": "Edit",
+	"view": "View",
+	"return": "Return",
+	"edit_collection": "Edit collection",
+	"edit_image": "Edit cover image",
+	"choose_image": "Choose image:"
 }
