changes in styles. frontend of edit item

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -68,5 +68,6 @@
 	"return": "Return",
 	"edit_collection": "Edit collection",
 	"edit_image": "Edit cover image",
-	"choose_image": "Choose image:"
+	"choose_image": "Choose image:",
+	"edit_item":"Edit item"
 }
